feat: Implement ProcessDistributedByInstanceDate components for OS